--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   </head>
 
   <body>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        document.body.style.backgroundColor = "transparent";
+      });
+    </script>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
